--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "matplotlib>=3.10.6",
     "pip>=25.2",
     "pytest>=8.4.1",
     "spacy>=3.8.7",
