FEAT: add readability_module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "lodot"
 version = "0.1.0"
-description = "Add your description here"
+description = "LODOT is a modular data engineering CLI tool for easily producing text mining reports in machine-actionable formats."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -9,4 +9,5 @@ dependencies = [
     "pip>=25.2",
     "pytest>=8.4.1",
     "spacy>=3.8.7",
+    "textstat>=0.7.10",
 ]
