--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "lodot"
+name = "climt"
 version = "0.1.0"
-description = "LODOT is a modular data engineering CLI tool for easily producing text mining reports in machine-actionable formats."
+description = "CLIMT is a modular data engineering CLI tool for easily producing text mining reports in machine-actionable formats."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -12,3 +12,6 @@ dependencies = [
     "textblob>=0.19.0",
     "textstat>=0.7.10",
 ]
+
+[project.scripts]
+climt = "main:main"
