--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pip>=25.2",
     "pytest>=8.4.1",
     "spacy>=3.8.7",
+    "tabulate>=0.9.0",
     "textblob>=0.19.0",
     "textstat>=0.7.10",
 ]
